[UPD] Changed some figures

--- a/code/notebooks/4-herding/3-herding.ipynb
+++ b/code/notebooks/4-herding/3-herding.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -80,27 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min_nbr_rats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -195,33 +175,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'H-M': 731, 'M-M': 3699, 'L-H': 142, 'M-L': 747, 'M-H': 750, 'L-M': 766, 'H-H': 222, 'H-L': 161, 'L-L': 206}\n"
+      "{'M-M': 6593, 'H-M': 1210, 'L-M': 1242, 'M-H': 1213, 'H-L': 138, 'M-L': 1225, 'L-L': 568, 'L-H': 116, 'H-H': 585}\n"
      ]
     }
    ],
    "source": [
     "print(classes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ba': {'high': 0.75545674666975404, 'low': -0.90731343022905975},\n",
-       " 'rb': {'high': 1.013232551091825, 'low': -0.59826642163134025}}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "thresholds"
    ]
   },
   {
@@ -300,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -409,6 +368,40 @@
     "            vals[class_]['avg'].append(np.mean(vals_both))\n",
     "            vals[class_]['low'].append(np.percentile(tmp, 2.5))\n",
     "            vals[class_]['high'].append(np.percentile(tmp, 97.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'avg': [1.3326759624280238,\n",
+       "  0.33144942958954726,\n",
+       "  0.11077390686292123,\n",
+       "  0.27978256841487226,\n",
+       "  0.079628252403541502],\n",
+       " 'high': [1.3845599692134363,\n",
+       "  0.44424014127107297,\n",
+       "  0.23190144544008098,\n",
+       "  0.3931282725024558,\n",
+       "  0.18831666413742162],\n",
+       " 'low': [1.2782111596996135,\n",
+       "  0.21357047046730271,\n",
+       "  -0.024973497758371842,\n",
+       "  0.16714495893541767,\n",
+       "  -0.042357962321748537]}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vals['H for (H-L)']"
    ]
   },
   {
