--- a/code/notebooks/4-herding/4-seatbelt.ipynb
+++ b/code/notebooks/4-herding/4-seatbelt.ipynb
@@ -79,8 +79,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -88,109 +90,27 @@
      "text": [
       "H-L:\n",
       "  BA:\n",
-      "    H: 0.545 [0.491, 0.599]\n",
-      "    L: 0.450 [0.379, 0.523]\n",
+      "    H: -0.031 [-0.182, 0.119]\n",
+      "    L: -0.392 [-0.550, -0.218]\n",
       "  RB:\n",
-      "    L: 0.489 [0.419, 0.554]\n",
-      "    H: 0.522 [0.450, 0.596]\n",
+      "    L: -0.120 [-0.274, 0.035]\n",
+      "    H: 0.226 [0.058, 0.393]\n",
       "\n",
       "H-M:\n",
       "  BA:\n",
-      "    H: 0.643 [0.624, 0.662]\n",
-      "    M: 0.578 [0.559, 0.596]\n",
+      "    H: 0.270 [0.222, 0.320]\n",
+      "    M: 0.056 [0.008, 0.110]\n",
       "  RB:\n",
-      "    M: 0.595 [0.575, 0.614]\n",
-      "    H: 0.627 [0.608, 0.646]\n",
+      "    M: 0.376 [0.331, 0.420]\n",
+      "    H: 0.498 [0.456, 0.538]\n",
       "\n",
       "M-L:\n",
       "  BA:\n",
-      "    M: 0.396 [0.376, 0.416]\n",
-      "    L: 0.368 [0.348, 0.391]\n",
+      "    M: -0.506 [-0.568, -0.453]\n",
+      "    L: -0.659 [-0.719, -0.600]\n",
       "  RB:\n",
-      "    L: 0.350 [0.330, 0.370]\n",
-      "    M: 0.400 [0.380, 0.419]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "min_nbr_rats = 10\n",
-    "\n",
-    "for to_study in ['H-L', 'H-M', 'M-L']:\n",
-    "\n",
-    "    nbr_draws = 1000\n",
-    "\n",
-    "    nbrs = {'ba': {}, 'rb': {}}\n",
-    "\n",
-    "    for cl in [to_study, to_study[::-1]]:\n",
-    "\n",
-    "        cls = {'ba': cl[0], 'rb': cl[-1]}\n",
-    "\n",
-    "        subdf = df[((df['ba']['class'] == cl[0]) & (df['rb']['class'] == cl[-1])) & \n",
-    "                   (df['ba']['nbr_ratings'] >= min_nbr_rats) & (df['rb']['nbr_ratings'] >= min_nbr_rats)] \n",
-    "\n",
-    "        for key in ['ba', 'rb']:\n",
-    "\n",
-    "            nbrs[key][cls[key]] = {}\n",
-    "\n",
-    "            ranks = np.array([r[min_nbr_rats-1] for r in subdf[key]['ranks']])\n",
-    "\n",
-    "            nbrs[key][cls[key]]['avg'] = np.mean(ranks)\n",
-    "\n",
-    "            tmp = []\n",
-    "            # Go through each draw\n",
-    "            for d in range(nbr_draws):\n",
-    "\n",
-    "                # Get the indices\n",
-    "                idx = np.random.randint(0, len(subdf[key]), len(subdf[key]))\n",
-    "\n",
-    "                ranks_tmp = ranks[idx]\n",
-    "\n",
-    "                tmp.append(np.mean(ranks_tmp))\n",
-    "            nbrs[key][cls[key]]['low'] = np.percentile(tmp, 2.5)\n",
-    "            nbrs[key][cls[key]]['high'] = np.percentile(tmp, 97.5)\n",
-    "        \n",
-    "\n",
-    "    print('{}:'.format(to_study))\n",
-    "    for key in nbrs:\n",
-    "        print('  {}:'.format(key.upper()))\n",
-    "        for key2 in nbrs[key]:\n",
-    "            print('    {}: {:.3f} [{:.3f}, {:.3f}]'.format(key2, nbrs[key][key2]['avg'], nbrs[key][key2]['low'], nbrs[key][key2]['high']))\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "H-L:\n",
-      "  BA:\n",
-      "    H: 0.556 [0.508, 0.602]\n",
-      "    L: 0.434 [0.384, 0.483]\n",
-      "  RB:\n",
-      "    L: 0.436 [0.387, 0.484]\n",
-      "    H: 0.553 [0.498, 0.602]\n",
-      "\n",
-      "H-M:\n",
-      "  BA:\n",
-      "    H: 0.655 [0.641, 0.670]\n",
-      "    M: 0.591 [0.575, 0.607]\n",
-      "  RB:\n",
-      "    M: 0.609 [0.594, 0.622]\n",
-      "    H: 0.651 [0.636, 0.666]\n",
-      "\n",
-      "M-L:\n",
-      "  BA:\n",
-      "    M: 0.406 [0.391, 0.422]\n",
-      "    L: 0.366 [0.351, 0.381]\n",
-      "  RB:\n",
-      "    L: 0.346 [0.331, 0.361]\n",
-      "    M: 0.398 [0.385, 0.412]\n",
+      "    L: -0.414 [-0.470, -0.361]\n",
+      "    M: -0.229 [-0.279, -0.183]\n",
       "\n"
      ]
     }
@@ -215,7 +135,7 @@
     "\n",
     "            nbrs[key][cls[key]] = {}\n",
     "\n",
-    "            ranks = np.array([r[min_nbr_rats-1] for r in subdf[key]['ranks']])\n",
+    "            ranks = np.array([r[min_nbr_rats-1] for r in subdf[key]['z_scores']])\n",
     "\n",
     "            nbrs[key][cls[key]]['avg'] = np.mean(ranks)\n",
     "\n",
