--- a/code/notebooks/4-herding/4-seatbelt.ipynb
+++ b/code/notebooks/4-herding/4-seatbelt.ipynb
@@ -79,10 +79,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -90,38 +88,51 @@
      "text": [
       "H-L:\n",
       "  BA:\n",
-      "    H: -0.031 [-0.182, 0.119]\n",
-      "    L: -0.392 [-0.550, -0.218]\n",
+      "    H: -0.022 [-0.191, 0.140]\n",
+      "    L: -0.392 [-0.577, -0.221]\n",
       "  RB:\n",
-      "    L: -0.120 [-0.274, 0.035]\n",
-      "    H: 0.226 [0.058, 0.393]\n",
+      "    L: -0.089 [-0.242, 0.087]\n",
+      "    H: 0.226 [0.056, 0.399]\n",
       "\n",
       "H-M:\n",
       "  BA:\n",
-      "    H: 0.270 [0.222, 0.320]\n",
-      "    M: 0.056 [0.008, 0.110]\n",
+      "    H: 0.270 [0.221, 0.315]\n",
+      "    M: 0.056 [0.009, 0.107]\n",
       "  RB:\n",
-      "    M: 0.376 [0.331, 0.420]\n",
-      "    H: 0.498 [0.456, 0.538]\n",
+      "    M: 0.376 [0.331, 0.416]\n",
+      "    H: 0.498 [0.454, 0.541]\n",
       "\n",
       "M-L:\n",
       "  BA:\n",
-      "    M: -0.506 [-0.568, -0.453]\n",
-      "    L: -0.659 [-0.719, -0.600]\n",
+      "    M: -0.506 [-0.562, -0.454]\n",
+      "    L: -0.657 [-0.715, -0.599]\n",
       "  RB:\n",
-      "    L: -0.414 [-0.470, -0.361]\n",
-      "    M: -0.229 [-0.279, -0.183]\n",
+      "    L: -0.414 [-0.470, -0.362]\n",
+      "    M: -0.231 [-0.282, -0.183]\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "np.random.seed(1)\n",
+    "\n",
+    "nbr_draws = 1000\n",
+    "\n",
     "min_nbr_rats = 5\n",
     "\n",
     "for to_study in ['H-L', 'H-M', 'M-L']:\n",
+    "    \n",
+    "    size_ = np.infty\n",
+    "    \n",
+    "    for cl in [to_study, to_study[::-1]]:\n",
     "\n",
-    "    nbr_draws = 1000\n",
     "\n",
+    "        subdf = df[((df['ba']['class'] == cl[0]) & (df['rb']['class'] == cl[-1])) & \n",
+    "                   (df['ba']['nbr_ratings'] >= min_nbr_rats) & (df['rb']['nbr_ratings'] >= min_nbr_rats)]    \n",
+    "        \n",
+    "        if size_ > len(subdf):\n",
+    "            size_ = len(subdf)\n",
+    "            \n",
     "    nbrs = {'ba': {}, 'rb': {}}\n",
     "\n",
     "    for cl in [to_study, to_study[::-1]]:\n",
@@ -130,7 +141,10 @@
     "\n",
     "        subdf = df[((df['ba']['class'] == cl[0]) & (df['rb']['class'] == cl[-1])) & \n",
     "                   (df['ba']['nbr_ratings'] >= min_nbr_rats) & (df['rb']['nbr_ratings'] >= min_nbr_rats)] \n",
-    "\n",
+    "        subdf.index = range(len(subdf))\n",
+    "        \n",
+    "        subdf = subdf.loc[np.random.choice(len(subdf), size_, replace=False)]\n",
+    "        \n",
     "        for key in ['ba', 'rb']:\n",
     "\n",
     "            nbrs[key][cls[key]] = {}\n",
@@ -160,15 +174,6 @@
     "            print('    {}: {:.3f} [{:.3f}, {:.3f}]'.format(key2, nbrs[key][key2]['avg'], nbrs[key][key2]['low'], nbrs[key][key2]['high']))\n",
     "    print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
