[ADD] Figures for the papers

--- a/code/notebooks/1-data_analysis/2-histograms.ipynb
+++ b/code/notebooks/1-data_analysis/2-histograms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,8 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from classes.helpers import *\n",
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +104,18 @@
    "source": [
     "print(len(ratings['ba']))\n",
     "print(len(ratings['rb']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(data_folder + 'plot/all_ratings.json', 'w') as outfile:\n",
+    "    json.dump(ratings, outfile)"
    ]
   },
   {
