--- a/code/notebooks/1-data_analysis/3-yearly.ipynb
+++ b/code/notebooks/1-data_analysis/3-yearly.ipynb
@@ -146,50 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2001\n",
-      "2002\n",
-      "2003\n",
-      "2004\n",
-      "2005\n",
-      "2006\n",
-      "2007\n",
-      "2008\n",
-      "2009\n",
-      "2010\n",
-      "2011\n",
-      "2012\n",
-      "2013\n",
-      "2014\n",
-      "2015\n",
-      "2016\n",
-      "2017\n",
-      "2001\n",
-      "2002\n",
-      "2003\n",
-      "2004\n",
-      "2005\n",
-      "2006\n",
-      "2007\n",
-      "2008\n",
-      "2009\n",
-      "2010\n",
-      "2011\n",
-      "2012\n",
-      "2013\n",
-      "2014\n",
-      "2015\n",
-      "2016\n",
-      "2017\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "years = list(range(2001, 2018))\n",
     "\n",
@@ -212,6 +171,18 @@
     "        avg[key]['mean'].append(np.mean(tmp))\n",
     "        avg[key]['low'].append(np.percentile(tmp, 2.5))\n",
     "        avg[key]['high'].append(np.percentile(tmp, 97.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(data_folder + 'plot/avg_year.json', 'w') as outfile:\n",
+    "    json.dump(avg, outfile)"
    ]
   },
   {
@@ -274,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -301,6 +272,18 @@
     "        std[key]['mean'].append(np.mean(tmp))\n",
     "        std[key]['low'].append(np.percentile(tmp, 2.5))\n",
     "        std[key]['high'].append(np.percentile(tmp, 97.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(data_folder + 'plot/std_year.json', 'w') as outfile:\n",
+    "    json.dump(std, outfile)"
    ]
   },
   {
