--- a/code/notebooks/3-standardization/1-z_score_yearly.ipynb
+++ b/code/notebooks/3-standardization/1-z_score_yearly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -334,9 +334,12 @@
     }
    ],
    "source": [
+    "with open('../data/tmp/z_score_params_matched_ratings.json') as file:\n",
+    "    z_score_params = json.load(file)\n",
+    "\n",
     "zscore = {'ba': [], 'rb': []}\n",
     "\n",
-    "for key in ratings_year.keys():\n",
+    "for key in zscore.keys():\n",
     "    print('Parsing {} reviews.'.format(key.upper()))\n",
     "    \n",
     "    gen = parse(data_folder + 'matched/ratings_{}.txt.gz'.format(key))\n",
@@ -344,7 +347,7 @@
     "    for item in gen:\n",
     "        \n",
     "        date = int(item['date'])\n",
-    "        year = datetime.fromtimestamp(date).year\n",
+    "        year = str(datetime.fromtimestamp(date).year)\n",
     "        \n",
     "        rat = float(item['rating'])\n",
     "                        \n",
@@ -368,6 +371,18 @@
    "source": [
     "print(min(np.min(zscore['ba']), np.min(zscore['rb'])))\n",
     "print(max(np.max(zscore['ba']), np.max(zscore['rb'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(data_folder + 'plot/zscore_matched.json', 'w') as outfile:\n",
+    "    json.dump(zscore, outfile)"
    ]
   },
   {
