--- a/code/notebooks/4-herding/4-seatbelt.ipynb
+++ b/code/notebooks/4-herding/4-seatbelt.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -88,33 +88,33 @@
      "text": [
       "H-L:\n",
       "  BA:\n",
-      "    H: -0.022 [-0.191, 0.140]\n",
-      "    L: -0.392 [-0.577, -0.221]\n",
+      "    H: -0.032 [-0.193, 0.123]\n",
+      "    L: -0.392 [-0.572, -0.231]\n",
       "  RB:\n",
-      "    L: -0.089 [-0.242, 0.087]\n",
-      "    H: 0.226 [0.056, 0.399]\n",
+      "    L: -0.066 [-0.220, 0.099]\n",
+      "    H: 0.226 [0.045, 0.393]\n",
       "\n",
       "H-M:\n",
       "  BA:\n",
-      "    H: 0.270 [0.221, 0.315]\n",
-      "    M: 0.056 [0.009, 0.107]\n",
+      "    H: 0.270 [0.225, 0.314]\n",
+      "    M: 0.057 [0.006, 0.107]\n",
       "  RB:\n",
-      "    M: 0.376 [0.331, 0.416]\n",
-      "    H: 0.498 [0.454, 0.541]\n",
+      "    M: 0.376 [0.334, 0.423]\n",
+      "    H: 0.498 [0.460, 0.542]\n",
       "\n",
       "M-L:\n",
       "  BA:\n",
-      "    M: -0.506 [-0.562, -0.454]\n",
-      "    L: -0.657 [-0.715, -0.599]\n",
+      "    M: -0.506 [-0.563, -0.450]\n",
+      "    L: -0.657 [-0.721, -0.596]\n",
       "  RB:\n",
-      "    L: -0.414 [-0.470, -0.362]\n",
-      "    M: -0.231 [-0.282, -0.183]\n",
+      "    L: -0.414 [-0.467, -0.363]\n",
+      "    M: -0.229 [-0.279, -0.176]\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "np.random.seed(1)\n",
+    "np.random.seed(10)\n",
     "\n",
     "nbr_draws = 1000\n",
     "\n",
@@ -174,6 +174,15 @@
     "            print('    {}: {:.3f} [{:.3f}, {:.3f}]'.format(key2, nbrs[key][key2]['avg'], nbrs[key][key2]['low'], nbrs[key][key2]['high']))\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
