--- a/code/notebooks/2-matching/4.1-sanity_check.ipynb
+++ b/code/notebooks/2-matching/4.1-sanity_check.ipynb
@@ -428,6 +428,130 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "matched = pd.read_csv(data_folder + 'matched/beers.csv', header=[0,1])\n",
+    "ba = pd.read_csv(data_folder + 'ba/beers.csv')\n",
+    "\n",
+    "def perc_style(arr, style):\n",
+    "    locs = np.array(arr)\n",
+    "    spec = []\n",
+    "    for l in locs:\n",
+    "        if style in l:\n",
+    "            spec.append(l)\n",
+    "\n",
+    "    return len(spec)/len(locs)*100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "American IPA:\n",
+      "  Unmatched: 10.8\n",
+      "  Matched: 12.1\n",
+      "\n",
+      "American Pale Ale (APA):\n",
+      "  Unmatched: 6.2\n",
+      "  Matched: 6.8\n",
+      "\n",
+      "Saison / Farmhouse Ale:\n",
+      "  Unmatched: 5.0\n",
+      "  Matched: 5.9\n",
+      "\n",
+      "American Double / Imperial IPA:\n",
+      "  Unmatched: 4.4\n",
+      "  Matched: 5.0\n",
+      "\n",
+      "American Wild Ale:\n",
+      "  Unmatched: 3.2\n",
+      "  Matched: 3.4\n",
+      "\n",
+      "American Amber / Red Ale:\n",
+      "  Unmatched: 3.1\n",
+      "  Matched: 3.1\n",
+      "\n",
+      "American Porter:\n",
+      "  Unmatched: 3.3\n",
+      "  Matched: 3.0\n",
+      "\n",
+      "American Stout:\n",
+      "  Unmatched: 2.6\n",
+      "  Matched: 2.6\n",
+      "\n",
+      "American Blonde Ale:\n",
+      "  Unmatched: 2.0\n",
+      "  Matched: 2.3\n",
+      "\n",
+      "Fruit / Vegetable Beer:\n",
+      "  Unmatched: 2.2\n",
+      "  Matched: 2.1\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "styles = ['American IPA', 'American Pale Ale (APA)', 'Saison / Farmhouse Ale', 'American Double / Imperial IPA',\n",
+    "          'American Wild Ale', 'American Amber / Red Ale', 'American Porter', 'American Stout', 'American Blonde Ale', \n",
+    "         'Fruit / Vegetable Beer']\n",
+    "for s in styles:\n",
+    "    print('{}:'.format(s))\n",
+    "    print('  Unmatched: {:.1f}'.format(perc_style(ba['style'], s)))\n",
+    "    print('  Matched: {:.1f}'.format(perc_style(matched['ba']['style'], s)))\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(rb['style'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "104"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ba['style'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
